WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269394
Regression(
274445@main
): Crash under HTMLMediaElement::updateActiveTextTrackCues() on Hulu.com
https://bugs.webkit.org/show_bug.cgi?id=269394
Summary
Regression(274445@main): Crash under HTMLMediaElement::updateActiveTextTrackC...
Chris Dumez
Reported
2024-02-14 12:47:29 PST
Crash under HTMLMediaElement::updateActiveTextTrackCues() on Hulu.com: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x1177fffa0 WebCore::TextTrackCue::isOrderedBefore(WebCore::TextTrackCue const*) const + 32 1 WebCore 0x11766c66c WebCore::compareCueInterval(WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&, WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&) + 132 2 WebCore 0x117695904 void std::__1::__insertion_sort[abi:sn170006]<std::__1::_ClassicAlgPolicy, bool (*&)(WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&, WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&), WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>>*>(WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>>*, WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>>*, bool (*&)(WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&, WebCore::PODInterval<WTF::MediaTime, WTF::WeakPtr<WebCore::TextTrackCue, WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>>> const&)) + 108 3 WebCore 0x11766571c WebCore::HTMLMediaElement::updateActiveTextTrackCues(WTF::MediaTime const&) + 628 4 WebCore 0x11769fbcc WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::updateActiveTextTrackCues(WTF::MediaTime const&)::$_0, void>::call() + 1072 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-02-14 12:47:37 PST
<
rdar://122959342
>
Chris Dumez
Comment 2
2024-02-14 12:56:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24445
EWS
Comment 3
2024-02-14 16:02:29 PST
Committed
274670@main
(fd9c1365ede0): <
https://commits.webkit.org/274670@main
> Reviewed commits have been landed. Closing PR #24445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug